Edited wiki page PolicyFormat through web user interface.

--- a/wiki/PolicyFormat.wiki
+++ b/wiki/PolicyFormat.wiki
@@ -111,9 +111,9 @@ A term section begins with the keyword term, followed by a term name.  Opening a
 
 The keywords fall into two categories, those are are required to be supported by all output generators, and those that are optionally supported by each generator.  Optional keywords are intended to provide additional flexibility when developing policies on a single target platform.  
 
-*NOTE* Some generators may silently ignore optional keyword tokens which they do not support.  
+*NOTE:* Some generators may silently ignore optional keyword tokens which they do not support.  
 
-*WARNING* When developing filters that are intended to be rendered across multiple generators (cisco, iptables & juniper for example) it is strongly recommended to only use required keyword tokens in the policy terms.  This will help ensure each platform's rendered filter will contain compatible security policies.
+*WARNING:* When developing filters that are intended to be rendered across multiple generators (cisco, iptables & juniper for example) it is strongly recommended to only use required keyword tokens in the policy terms.  This will help ensure each platform's rendered filter will contain compatible security policies.
 
 === Keywords ===
 The following are a list of keywords that must be supported by all output generators:
@@ -122,7 +122,7 @@ The following are a list of keywords that must be supported by all output genera
   * _destination-address::_ one or more destination address tokens
   * _destination-exclude::_ exclude one or more address tokens from the specified destination-address 
   * _destination-port::_ one or more service definition tokens
-  * _icmp-type::_ specify icmp-type code to match, see section [ICMP TYPES|ICMP_TYPES] for list of valid arguments
+  * _icmp-type::_ specify icmp-type code to match, see section [PolicyFormat#ICMP_TYPES ICMP TYPES] for list of valid arguments
   * _option::_ [established|tcp-established|sample|intial|rst|first-fragment]
     * _established_ - only permit established connections, implements tcp-established if protocol is tcp only, otherwise adds 1024-65535 to required destination-ports.
     * _tcp-established_ - only permit established tcp connections, usually checked based on TCP flag settings.  If protocol UDP is included in term, only adds 1024-65535 to required destination-ports.
