Edited wiki page InstallationNotes through web user interface.

--- a/wiki/InstallationNotes.wiki
+++ b/wiki/InstallationNotes.wiki
@@ -1,5 +1,8 @@
 #summary Installation Notes.
 
+= Table of Contents =
+<wiki:toc max_depth="3" />
+
 = Introduction =
 
 This page is intended to provide the necessary information needed to install
