Edited wiki page PolicyFormat through web user interface.

--- a/wiki/PolicyFormat.wiki
+++ b/wiki/PolicyFormat.wiki
@@ -145,6 +145,8 @@ The following are a list of keywords that must be supported by all output genera
     * _initial_ - currently only supported by juniper generator.  Appends tcp-initial to the term.
     * _rst_ - currently only supported by juniper generator.  Appends "tcp-flags rst" to the term.
     * _first-fragment_ - currently only supported by juniper generator.  Appends 'first-fragment' to the term.
+  * _platform:: one or more target platforms for which this term should ONLY be rendered
+  * _platform-exclude:: one or more target platforms for which this term should NEVER be rendered
   * _protocol::_ the network protocols this term will match, such as tcp, udp, icmp, or a numeric value.
   * _source-address::_ one or more source address tokens
   * _source-exclude::_ exclude one or more address tokens from the specified source-address
