Edited wiki page PolicyFormat through web user interface.

--- a/wiki/PolicyFormat.wiki
+++ b/wiki/PolicyFormat.wiki
@@ -162,7 +162,7 @@ The following are keywords that can be optionally supported by output generators
   * _destination-prefix::_ juniper only, specify destination-prefix matching (e.g. source-prefix:: configured-neighbors-only)
   * _ether-type::_ juniper only, specify matching ether-type(e.g. ether-type:: arp)
   * _fragement-offset::_ juniper only, specify a fragment offset of a fragmented packet
-  * _logging::_ supported juniper and iptables/speedway, specify that this packet should be logged via syslog
+  * _logging::_ supported juniper, srx and iptables/speedway, specify that this packet should be logged via syslog
   * _loss-priority::_ juniper only, specify loss priority
   * _packet-length::_ juniper only, specify packet length
   * _policer::_ juniper only, specify which policer to apply to matching packets
@@ -172,6 +172,7 @@ The following are keywords that can be optionally supported by output generators
   * _routing-instance::_ juniper only, specify routing instance for matching packets
   * _source-interface::_ iptables and speedway only, specify specific interface a term should apply to (e.g. source-interface:: eth3)
   * _source-prefix::_ juniper only, specify source-prefix matching (e.g. source-prefix:: configured-neighbors-only)
+  * _timeout::_ Juniper SRX only, specify application timeout (default 60)
   * _traffic-type::_ juniper only, specify traffic-type
 
 === Term Examples ===
