--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -1,4 +1,4 @@
-#Quick Start Guide for Capirca ACL Generation
+#summary Quick Start Guide for Capirca ACL Generation
 
 = Table of Contents =
 <wiki:toc max_depth="3" />
@@ -28,13 +28,19 @@ vi ./filters/sample.*
 = Creating Your Own Filters = 
 
  # Add your Networks & Hosts definitions
-   * vi ./def/NETWORK.net
+{{{
+vi ./def/NETWORK.net
+}}}
    * Note: you can also create your own [CUSTOM].net files which will be automatically included.  This can be used to group or separate particular definitions into distinct files.
  # Add any necessary service definitions
-   * vi ./def/SERVICES.svc
+{{{
+vi ./def/SERVICES.svc
+}}}
    * Note: you can also create your own [CUSTOM].svc files which will be automatically included.
  # Define a new security policy
-   * vi ./policies/my-custom.pol
+{{{
+vi ./policies/my-custom.pol
+}}}
  # Create the filter header and specify target platforms
    * http://code.google.com/p/capirca/wiki/PolicyFormat#Terms_Section
 {{{
