--- a/wiki/DefinateQuickStart.wiki
+++ b/wiki/DefinateQuickStart.wiki
@@ -4,9 +4,11 @@
 <wiki:toc max_depth="3" />
 
 = Overview of Definate =
-The Definate project is intended to provide a generic framework capable of generating network and host ACL definitions as directed by a configuration file independent of the code used to generate them.
+Definate is a generic framework capable of generating ACL definitions, with definitions specified in a configuration file independent of the code to generate them.
 
-To accomplish this, we use a flexible and intuitive configuration language.  The configuration will direct a configured generator to consult an external data source to obtain IPs or networks that comprise a configured definition, then apply a set of filters will transform the output (the definition list) before it is written to a Capirca definition file. This so far includes tasks like resolving host names to generate comments, sorting the entries, and formatting the definition as a human-readable string.  
+A flexible and intuitive configuration language allows that. The configuration directs a configured generator to consult an external data source to obtain IPs or networks that comprise a configured definition, then a set of filters will transform the output (the definition list) before it is written to a file or output elsewhere. This includes tasks like resolving host names to generate comments, sorting the entries, and formatting the definition as a human-readable string. Filters can run on mutliple levels (global, file, definition) and can be run before and/or after that level is passed.
+
+In a first step, Definate will include a DNS generator as an example generator and depending on needs, other generators can easily be added later.
 
 The definate system is designed and intended to be extensible allowing administrators to write new modules to pull definition data from whatever sources they find useful.  If you develop new definate modules that others may find useful, please send them to the capirca-dev@ mailing list so that others may benefits from your efforts.
 
